@@ -3,11 +3,11 @@ package de.htwsaar.cantineplanner.presentation.pages;
 import com.googlecode.lanterna.gui2.*;
 import com.googlecode.lanterna.TextColor;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class NotificationScreenBuilder extends AbstractScreen {
-    private String notificationMessage;
-    private TextColor textColor;
+    private final String notificationMessage;
+    private final TextColor textColor;
 
     public NotificationScreenBuilder(MultiWindowTextGUI gui, String notificationMessage, TextColor textColor) {
         super(gui);
@@ -26,14 +26,12 @@ public class NotificationScreenBuilder extends AbstractScreen {
         panel.addComponent(new Label(notificationMessage)
                 .setForegroundColor(textColor));
 
-        Button closeButton = new Button("Close", () -> {
-            gui.getActiveWindow().close();
-        });
+        Button closeButton = new Button("Close", () -> gui.getActiveWindow().close());
         panel.addComponent(closeButton);
 
         BasicWindow window = new BasicWindow("Notification");
         window.setComponent(panel);
-        window.setHints(Arrays.asList(Window.Hint.CENTERED));
+        window.setHints(List.of(Window.Hint.CENTERED));
 
         gui.addWindowAndWait(window);
     }
